# AdventOfCode2024

./: .gitignore  Cargo.toml  bacon.toml
src/: days.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day13.rs  day17.rs  day18.rs  template.rs
